--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -9,9 +9,12 @@
     <button class="busqueda" (click)="presentarProd()">
       <img src="./assets/img/busqueda.webp" alt="busqueda" />
     </button>
-    <span class="carrito">
-      <img src="./assets/img/logo.webp" alt="carrito">{{number}}
-    </span>
+    <div class="carrito">
+      <a routerLink="/facturar">
+        <img src="./assets/img/logo.webp" alt="carrito">
+      </a>
+      <span>{{number}}</span>
+    </div>
   </div>
   <div class="panel-info">
     <div class="producto">
