--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -3,45 +3,55 @@
   margin-left: 10%;
   padding: 1.5%;
 }
+
 .retorno-home a {
   font-weight: bold;
   font-size: medium;
   font-family: cursive;
   color: rgb(86, 32, 131);
 }
+
 h4 {
   align-content: center;
   font-weight: bold;
   font-size: large;
   margin-bottom: 2%;
 }
-.grid{
+
+.factura-list {
+  display: grid;
+  grid-template-rows: 35px auto auto;
+  grid-template-columns: minmax(200px, 700px);
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-container {
   display: grid;
 }
-.factura-list {
-  min-width: 200px;
-  width: auto;
-  grid-template-rows: 35px auto auto;
-  justify-content: center;
-}
+
 .cabecera {
   grid-template-columns: 110px 400px;
   margin: 5px 0 5px 0;
 }
+
 .titulos {
   grid-gap: 4px;
   grid-template-rows: repeat(4, 20px);
   font-size: 1.4rem;
   font-weight: bold;
 }
+
 .inputs {
   grid-gap: 4px;
   grid-template-rows: repeat(4, 20px);
 }
-.inputs input{
-  border: none;
+
+.inputs input {
+  border: 1px solid rgb(202, 194, 194);
+  border-radius: 5%;
   cursor: pointer;
-  width: 90%;
+  width: 85%;
   font-size: 1.4rem;
   font-weight: 600;
   padding-left: 5px;
@@ -50,10 +60,7 @@ h4 {
 .table {
   margin-top: 40px;
 }
-.table img{
-  width: 25px;
-  height: 10px;
-}
+
 .table button {
   border: 2px solid #a84830;
   background-color: white;
@@ -63,23 +70,122 @@ h4 {
   font-size: 10px;
   border-radius: 8px;
 }
+
 .table button:hover {
   background-color: #a84830;
   color: white;
 }
+
 #negrita {
   font-weight: bold;
   font-size: medium;
 }
+
 #check {
-  width: 5%;
+  width: 7%;
+  padding-left: 0;
 }
+
+#check img {
+  height: 10px;
+}
+
+
 .table th {
   font-size: 1.2rem;
   width: 25%;
   text-align: center;
-  /* border: 1px solid #54ad9a; */
 }
+.table td {
+  font-size: 1.4rem;
+  font-weight: 600;
+  padding-left: 15px;
+}
+.producto {
+  width: 200px !important;
+}
+.cantidad {
+  width: 100px !important;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
 .table-head {
   background-color: #8ce276;
+}
+
+.comprar-btn {
+  display: flex;
+  margin-top: 60px;
+  padding: 10px 20px;
+  background-color: #54ad9a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  cursor: pointer;
+  width: 70%;
+  justify-content: center;
+  justify-self: center;
+}
+
+.remove-btn {
+  background-color: #a84830;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  margin-left: 20%;
+}
+
+
+.modal-header {
+  background-color: #89bc7c;
+  width: 440px;
+  text-align: center;
+}
+.modal-header button {
+  border-radius: 5%;
+  margin-right: 5px;
+}
+.custom-modal-content {
+  background-color: #6494a4;
+  width: 440px;
+  max-height: 200px;
+  text-align: center;
+}
+
+.custom-modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.custom-modal-body img {
+  max-height: 200px;
+  margin-bottom: 20px;
+  padding: 10%;
+}
+.modal-footer {
+  background-color: #909278;
+  width: 440px;
+  max-height: 200px;
+  text-align: center;
+}
+
+/* .modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: opacity 0.5s ease;
+} */
+.modal-open .modal-backdrop.show {
+  opacity: 1;
 }
