--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,6 @@
     <img src="./assets/img/logo.webp" alt="logo" />
   </section>
   <div class="title">
-    <h3>FACTURA ELECTRONICA</h3>
+    <h3>PHARMA TECHBLIZT</h3>
   </div>
 </header>
