--- a/src/app/components/factura/factura.component.html
+++ b/src/app/components/factura/factura.component.html
@@ -58,12 +58,18 @@
       </tfoot>
     </table>
 
-    <button class="comprar-btn" (click)="comprarProducto()">Comprar</button>
+    <button
+      class="comprar-btn"
+      (click)="comprarProducto()"
+    >
+      Comprar
+    </button>
   </form>
 </main>
 
-<ng-template #successModal class="modal-main" let-modal>
-  <!-- <div class="modal-backdrop"></div> -->
+<app-success-modal *ngIf="showSuccessModal" (closeModal)="cerrarModal()"></app-success-modal>
+
+<!-- <ng-template #successModal class="modal-main" let-modal>
   <div class="modal-header">
     <h4 class="modal-title">¡Compra exitosa!</h4>
     <button type="button" class="btn close" aria-label="Close" (click)="cerrarModal()">
@@ -78,5 +84,35 @@
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="cerrarModal()">Aceptar</button>
   </div>
-</ng-template>
-
+</ng-template> -->
+<!-- <div
+  class="modal fade"
+  id="exampleModalCenter"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">...</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Close
+        </button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div> -->
