FIX: find a cliente by its identification. ADD: a traerclientePorCedula service

--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -23,6 +23,9 @@
   font-weight: 600;
   width: 60%;
 }
+#filtradosLista {
+  width: 90%;
+}
 .carrito {
   display: inline-block;
   left: calc(35% - 100px);
