--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -56,6 +56,18 @@ h4 {
   font-weight: 600;
   padding-left: 5px;
 }
+.busqueda {
+  position: absolute;
+  top: calc(17%);
+  left: calc(60%);
+  cursor: pointer;
+  border: 2px solid rgb(41, 67, 66);
+  border-radius: 30%;
+}
+.busqueda img {
+  width: 25px;
+  height: auto;
+}
 
 .table {
   margin-top: 40px;
@@ -89,12 +101,18 @@ h4 {
 #check img {
   height: 10px;
 }
-
+.table-body {
+  height: 200px;
+  overflow: hidden;
+}
 
 .table th {
   font-size: 1.2rem;
   width: 25%;
   text-align: center;
+}
+.table tr {
+  height: 25px !important;
 }
 .table td {
   font-size: 1.4rem;
@@ -116,7 +134,7 @@ h4 {
 
 .comprar-btn {
   display: flex;
-  margin-top: 60px;
+  margin-top: 40px;
   padding: 10px 20px;
   background-color: #54ad9a;
   color: white;
@@ -140,18 +158,3 @@ h4 {
   cursor: pointer;
   margin-left: 20%;
 }
-
-
-/* .modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  opacity: 0;
-  transition: opacity 0.5s ease;
-} */
-/* .modal-open .modal-backdrop.show {
-  opacity: 1;
-} */
