--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,16 +1,26 @@
 <div class="main-body">
   <div class="barra-busqueda">
-    <input
-      type="text"
-      id="panelBusqueda"
-      [(ngModel)]="busqueda"
-      (ngModelChange)="filtrarProducto()"
-      placeholder="busca un producto"
-      list="filtradosLista"
-    />
-    <datalist id="filtradosLista">
-      <option *ngFor="let nombre of filtrados" [value]="nombre"></option>
-    </datalist>
+
+    <div class="panelBusqueda">
+      <input
+        type="text"
+        class="panelBusqueda-input"
+        [(ngModel)]="busqueda"
+        (ngModelChange)="filtrarProducto()"
+        (click)="filtrarProducto()"
+        placeholder="busca un producto"
+        autocomplete="off"
+      />
+      <div class="autocomplete-container" *ngIf="showProductoContainer">
+        <div
+          class="autocomplete-option"
+          *ngFor="let nombre of filtrados"
+          (click)="seleccionarOpcion(nombre)"
+        >
+          {{ nombre }}
+        </div>
+      </div>
+    </div>
 
     <button class="busqueda" (click)="presentarProd()">
       <img src="./assets/img/busqueda.webp" alt="busqueda" />
