--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -111,9 +111,7 @@ h4 {
   width: 25%;
   text-align: center;
 }
-.table tr {
-  height: 25px !important;
-}
+
 .table td {
   font-size: 1.4rem;
   font-weight: 600;
@@ -123,7 +121,10 @@ h4 {
   width: 200px !important;
 }
 .cantidad {
-  width: 100px !important;
+  display: block;
+}
+.cantidad input {
+  width: 40px;
   font-size: 1.2rem;
   font-weight: 500;
 }
