--- a/src/app/components/success-modal/success-modal.component.css
+++ b/src/app/components/success-modal/success-modal.component.css
@@ -49,6 +49,8 @@
   padding: 10%;
 }
 .modal-footer {
+  display: flex;
+  flex-direction: column;
   position: relative;
   justify-content: center;
   background-color: #909278;
@@ -56,7 +58,13 @@
   max-height: 200px;
   text-align: center;
 }
-.modal-footer button {
-  width: 100px;
+.modal-footer {
+  color: rgb(152, 60, 43);
+  font-weight: 700;
+}
+
+.footer-buttons button {
+  width: 115px;
+  justify-content: center;
   font-size: 1.4rem;
 }
