--- a/src/app/components/factura/factura.component.html
+++ b/src/app/components/factura/factura.component.html
@@ -47,7 +47,7 @@
   <table class="table table-striped">
     <thead class="table-head">
       <tr>
-        <th id="check">check</th>
+        <th class="check" id="check">check</th>
         <th class="producto" id="negrita">Producto</th>
         <th class="cantidad" id="negrita">Cantidad</th>
         <th id="negrita">Precio</th>
