--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <section class="section-logo">
-    <img src="./assets/img/logo.webp" alt="logo" />
+    <img src="assets/img/logo.webp" alt="logo" />
   </section>
   <div class="title">
     <h3>PHARMA TECHBLIZT</h3>
