FIX: styles and responsive design

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -43,7 +43,7 @@
         <img [src]="item.img" alt="producto" />
       </div>
       <ng-template #default>
-        <img src="assets/img/noItems.webp" alt="notFound" />
+        <img src="assets/img/empty-cart.png" alt="notFound" />
       </ng-template>
     </div>
     <div class="info">
