--- a/src/app/components/crear-producto/crear-producto.component.html
+++ b/src/app/components/crear-producto/crear-producto.component.html
@@ -28,7 +28,7 @@
           type="text"
           id="descripcion"
           name="descripcion"
-          placeholder="Descipcion del producto"
+          placeholder="Descipcion del producto (255 max)"
           formControlName="descripcion"
         />
         <input
@@ -42,14 +42,14 @@
           type="number"
           id="precio"
           name="precio"
-          placeholder="El precio del producto $$"
+          placeholder="El precio del producto $$ (solo numeros)"
           formControlName="precio"
         />
         <input
           type="number"
           id="iva"
           name="iva"
-          placeholder="En caso de no tener iva, escriba 0"
+          placeholder="En caso de no tener iva, escriba 0. (solo numeros)"
           formControlName="iva"
         />
         <input
