--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -15,17 +15,20 @@
   width: 90%;
   height: 30px;
 }
+.panel-busqueda button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
 .barraBusqueda {
   display: flex;
   flex-direction: column;
-  background-color: rgb(225, 232, 245);
+  background-color: rgb(235, 239, 245);
   width: 60%;
 }
 .panelBusqueda-input {
-  background-color: rgb(225, 232, 245);
+  background-color: rgb(241, 243, 246);
   padding: 3px;
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 700;
   width: 100%;
 }
 .autocomplete-container {
@@ -84,6 +87,7 @@
   justify-content: center;
 }
 .producto {
+  display: grid;
   padding: 4%;
   overflow: hidden;
   margin: auto auto;
@@ -96,7 +100,9 @@
 }
 .info {
   padding: 5%;
-  border: 1px solid gray;
+  border-left: 1.5px solid rgb(41, 67, 66);
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
   font-family: 'Franklin Gothic Medium', Arial, sans-serif;
   overflow-y: hidden;
 }
@@ -113,20 +119,22 @@
 .info p {
   padding-right: 2%;
   font-size: 1.4em;
+  font-weight: 700;
+  color: #655f5f;
   margin-bottom: 15px;
-  text-align: justify;
+  text-align: left;
 }
 .iva-condition {
   display: flex;
   flex-direction: row;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 .iva-condition h3 {
   margin-top: 3px;
 }
 .total {
   font-size: 1.4rem;
-  margin: -2px 0 0 5px;
+  margin: 1px 0 0 5px;
 }
 .total span {
   font-size: 1.5rem;
@@ -140,22 +148,30 @@
   margin-top: 15%;
 }
 .agregar button {
-  background-color: antiquewhite;
+  background-color: rgb(255, 250, 245);
+  outline: none;
   border-radius: 10%;
   cursor: pointer;
   padding: 2%;
   font-weight: 700;
+  border: 1px solid rgb(41, 67, 66);
   box-shadow: 1px 3px 5px rgb(67, 98, 86);
 }
+.agregar button:hover {
+  background-color: rgb(161, 196, 196)
+}
+.button.agregar button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
-
-@media screen and (min-width: 670px) and (max-width: 1060px) {
+@media screen and (min-width: 700px) and (max-width: 1060px) {
   .main-body {
     width: 90%;
     padding: 5% 5%;
   }
   .panel-info {
-    height: 1fr;
     grid-template-columns: 1fr 1fr;
   }
   .producto {
@@ -166,7 +182,7 @@
     margin: 0 auto;
   }
 }
-@media screen and (max-width: 670px) {
+@media screen and (max-width: 700px) {
   .main-body {
     width: 90%;
     padding: 5% 0;
@@ -202,5 +218,11 @@
   }
   .carrito img{
     width: 33px;
+  }
+  .info {
+    border: 1px solid rgb(41, 67, 66);
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 0;
   }
 }
