--- a/src/app/components/crear-producto/crear-producto.component.css
+++ b/src/app/components/crear-producto/crear-producto.component.css
@@ -13,30 +13,30 @@
 .main {
   position: absolute;
   top: 80px;
-  left: calc(50% - 300px);
+  left: calc(50%);
+  transform: translateX(-50%);
   border: 2px solid rgb(88, 65, 118);
   z-index: 1;
 }
 .modal-header {
-  background-color: #9ecf91;
-  width: 600px;
+  background-color: rgb(161, 196, 196);
   text-align: center;
 }
 .header-title {
   font-size: 1.8rem;
   font-weight: 600;
-  margin-left: auto;
+  margin-left: 17rem;
 }
 .modal-header button {
-  margin-right: 5px;
   font-size: 2.2rem;
   font-weight: 700;
+  margin: -1rem 1rem -1rem 0;
 }
 .grid-container {
   display: grid;
 }
 .formulario {
-  background-color: papayawhip;
+  background-color: rgb(218, 226, 233);
   padding: 5px 15px;
 }
 .cabecera {
@@ -57,7 +57,7 @@
 .modal-footer {
   position: relative;
   justify-content: center;
-  background-color: grey;
+  background-color: #b5b5cdd9;
   width: 600px;
   max-height: 200px;
   text-align: center;
@@ -65,4 +65,40 @@
 .modal-footer button {
   width: 100px;
   font-size: 1.4rem;
+}
+
+@media screen and (max-width: 700px) {
+  .main {
+    width: 90%;
+  }
+  .modal-header {
+    width: 100%;
+    margin: 0;
+  }
+  .header-title {
+    font-size: 1.6rem;
+    margin: auto;
+  }
+  .formulario {
+    width: 100%;
+    margin: 0;
+  }
+  .cabecera {
+    grid-template-columns: 90px 80%;
+    margin: 5px 0 5px 0;
+    font-size: 1.5rem;
+  }
+  .inputs {
+    width: 90%;
+  }
+  .modal-footer {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .inputs {
+    width: 80%;
+  }
 }
